--- a/views/userAccess.html
+++ b/views/userAccess.html
@@ -7,14 +7,14 @@
 
             <br>
             <!--<label for="uname">Username/E-mail:</label>-->
-            <input type="text" name="username" id="uname" placeholder="USERNAME" required autofocus>
+            <input type="text" name="username" id="uname" placeholder="Username" required autofocus>
 
             <br>
             <!--<label for="password">Password:</label>-->
-            <input type="password" name="password" id="password" placeholder="PASSWORD" maxlength="10" required>
+            <input type="password" name="password" id="password" placeholder="Password" maxlength="10" required>
 
             <br>
-            <input type="submit" name="login" id="submit_login" value="Sign me in" class="btn">
+            <input type="submit" name="login" id="submit_login" value="Sign in" class="btn">
 
             <br>
             <div class="flex_container actions">
@@ -28,25 +28,24 @@
 
             <br>
             <!--<label for="fname">First name:</label>-->
-            <input type="text" name="fname" id="fname" placeholder="Your first-name" required>
+            <input type="text" name="fname" id="fname" placeholder="First name" required autofocus>
 
             <br>
             <!--<label for="lname">Last name:</label>-->
-            <input type="text" name="lname" id="lname" placeholder="Your last-name" required>
+            <input type="text" name="lname" id="lname" placeholder="Last name" required>
 
             <br>
             <!--<label for="new_uname">Username:</label>-->
-            <input type="text" name="username" id="new_uname" placeholder="Desired username" required autofocus>
+            <input type="text" name="username" id="new_uname" placeholder="Username" required>
 
             <br>
             <!--<label for="email">E-mail:</label>-->
-            <input type="email" name="email" id="email" placeholder="Your e-mail address" required>
+            <input type="email" name="email" id="email" placeholder="E-mail address" required>
 
             <br>
             <!--<label for="password1">Password:</label>-->
             <input type="password" name="password" id="password1"
-                   placeholder="Enter a password (max-length=10)" maxlength="10" required>
-
+                   placeholder="Password (min length=6)" maxlength="10" required>
             <br>
             <!--<label for="password2">Re-enter password:</label>-->
             <input type="password" name="password2" id="password2"
