--- a/views/profile.html
+++ b/views/profile.html
@@ -10,8 +10,8 @@
                 <p>Rating: <span class="profile_rating"> 7/10 </span></p>
             </div>
             <div class="flex_col_container account_actions padding_8 full_width">
-                <button type="button" name="settings" class="theme full_width">Settings</button>
-                <button type="button" name="sign_out_btn" class="theme full_width" id="sign_out_btn">Sign-out</button>
+                <button name="settings" class="theme full_width">Settings</button>
+                <button name="sign_out" class="theme_btn full_width">Sign-out</button>
             </div>
         </div>
     </div>
