back-end updates

--- a/views/home.html
+++ b/views/home.html
@@ -7,17 +7,17 @@
     <!-- CONTAINER FOR MINI PROFILE CARDS -->
     <div id="profiles" class="flex_container full_width mini_profiles_view">
         <!-- MINI PROFILE CARD TEMPLATE -->
-        <div class="card_container mini_profile center flex_1 padding_8">
+        <div class="card_container mini_profile center padding_8">
             <div class="flex_col_container card">
                 <div class="flex_col_container profile_info">
                     <img src="imgs/app/avt.svg" id="profile_img"/>
-                    <div class="flex_container card_title center     ">
+                    <div class="flex_container card_title center">
                         <p class="profile_username center"></p>
                     </div>
                 </div>
                 <div class="flex_container card_actions pos_right">
                     <label class="btn theme_toggle">
-                        <input type="checkbox" name="profile_like">
+                        <input type="checkbox" name="profile_like" hidden>
                         <i class="fa fa-heart"></i>
                     </label>
                 </div>
