--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /**!! GENERAL STYLES !!**/
-html, body {height: 100%; width: 100%;max-width: 100%;}
+html, body {height: 100%;width: 100%;max-width: 100%;}
 html {
     background: url("../imgs/app/bg.jpg") no-repeat center fixed;
     background-size: cover;
@@ -47,21 +47,9 @@ header {
 	background-color: rgb(66, 0, 0);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-/*header form {width: 30%;}
-header form input {width: 30%;text-align: left;margin: 0;border: none;}
-header form button {margin-left: 0; transition: all 1s;}
-header form input + button {display: none;}*/
-/*header form input:required:invalid {border-color: #992030;width: 57%;}
-header form input:required:focus {border: 1px dashed white;width: 60%;}*/
-/*header form input:focus {width: 80%; background: white; color: black;border: none;}
-header form input:valid + button {display: block;}*/
 nav {align-self: flex-end;margin-right: 0;flex-wrap: nowrap;-webkit-flex-wrap: nowrap;}
 .branding {align-self: flex-start; margin-left: 2%;}
-.branding, nav {
-	width: auto;
-	height: 100%;
-	max-height: 100%;
-}
+.branding, nav {width: auto;height: 100%;max-height: 100%;}
 .branding .brand_logo_sm {height: 95%; width: auto;}
 /**!! MAIN VIEW CONTAINER !!**/
 .home {background-color: rgba(255,255,255,0.7);}
